@@ -49,7 +49,7 @@ INFILE_NAME=STDIN
 INPUTDIR=${DATADOWNLOADS}/ensembl_mus_protein
 
 # Input file name - must be updated with each load
-APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.56.pep.all.fa.gz
+APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.53.pep.all.fa.gz
 
 # Complete path to config file for assocload
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/ensembl_proteinassocload.config
@@ -66,11 +66,13 @@ export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 # Load Reference
 SEQ_JNUMBER=J:91388
 
-# release date - must be updated with each load
-SEQ_RELEASE_DATE=2009/03/01
+# release date - must be updated with each load and should match
+# that of assemblyload 
+SEQ_RELEASE_DATE=2009/03/04
 
-# for the release number - must be updated with each load
-SEQ_RELEASE_NO=v56
+# This is the sequence version in the database.
+# set to mouse build number
+SEQ_RELEASE_NO="Build.37"
 
 export SEQ_JNUMBER SEQ_RELEASE_DATE SEQ_RELEASE_NO
 
