@@ -66,11 +66,13 @@ export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 # Load Reference
 SEQ_JNUMBER=J:109762
 
-# release date - must be updated with each load
-SEQ_RELEASE_DATE=2009/03/01
+# release date - must be updated with each load and should match
+# that of assemblyload 
+SEQ_RELEASE_DATE=2009/12/17
 
-# for the release number - must be updated with each load
-SEQ_RELEASE_NO=v36
+# This is the sequence version in the database.
+# set to mouse build number
+SEQ_RELEASE_NO="Build.37"
 
 export SEQ_JNUMBER SEQ_RELEASE_DATE SEQ_RELEASE_NO
 
