@@ -1,3 +1,10 @@
+gyhtTAG: vega_ensemblseqload-4-3-1-9
+DATE: 01/22/2009
+STAFF: sc
+CHANGES:
+1) Update curation logging, updated specific config files
+  with proper RELEASE_NO
+
 TAG: vega_ensemblseqload-4-3-1-8
 DATE: 01/20/2009
 STAFF: sc
